src/app/globals.css
/* ... */
:root {
	--radius: 0.625rem;
	--background: oklch(1 0 0);
	--foreground: oklch(0.145 0 0);
	--card: oklch(1 0 0);
	--card-foreground: oklch(0.145 0 0);
	--popover: oklch(1 0 0);
	--popover-foreground: oklch(0.145 0 0);
	--primary: oklch(0.145 0 0);
	--primary-foreground: oklch(0.3211 0 0) --secondary: oklch(0.97 0 0);
	--secondary-foreground: oklch(0.3211 0 0);
	--muted: oklch(0.9491 0 0);
	--muted-foreground: oklch(0.556 0 0);
	--accent: oklch(0.97 0 0);
	--accent-foreground: oklch(0.205 0 0);
	--destructive: oklch(0.577 0.245 27.325);
	--border: oklch(0.922 0 0);
	--input: oklch(0.922 0 0);
	--ring: oklch(0.708 0 0);
	--bg-primary: oklch(0.6822 0.1156 192.6);
	--bg-secondary: oklch(0.9491 0 0);
	--bg-tertiary: oklch(0.8975 0 0);
}

.dark {
	--background: oklch(0.145 0 0);
	--foreground: oklch(0.985 0 0);
	--card: oklch(0.2134 0 0);
	--card-foreground: oklch(0.985 0 0);
	--popover: oklch(0.205 0 0);
	--popover-foreground: oklch(0.985 0 0);
	--primary: oklch(0.985 0 0);
	--primary-foreground: oklch(0.6268 0 0) --secondary: oklch(0.269 0 0);
	--secondary-foreground: oklch(0.985 0 0);
	--muted: oklch(0.1776 0 0);
	--muted-foreground: oklch(0.708 0 0);
	--accent: oklch(0.269 0 0);
	--accent-foreground: oklch(0.985 0 0);
	--destructive: oklch(0.704 0.191 22.216);
	--border: oklch(0.252 0 0);
	--input: oklch(1 0 0 / 15%);
	--ring: oklch(0.556 0 0);
	--bg-primary: oklch(0.6822 0.1156 192.6);
	--bg-secondary: oklch(0.1957 0 0);
	--bg-tertiary: oklch(0.1286 0 0);
}

h1 { font-size: 45px; }
h2 { font-size: 36px; }
h3 { font-size: 30px; }
h4 { font-size: 24px; }
h5 { font-size: 20px; }
h6 { font-size: 16px; }
/* p { font-size: 16px; } */




@layer base {
	* {
		@apply border-border outline-ring/50;
	}

	body {
		@apply bg-background text-foreground;
	}
}

@layer base {

	button:not(:disabled),
	[role="button"]:not(:disabled) {
		cursor: pointer;
	}
}


/*------------------------------------------------------------------*/
/*	01) Base
/*------------------------------------------------------------------*/

html {
	overflow-x: hidden;
	padding: 0px;
	margin: 0px
}

*:after,
*:before,
* {
	box-sizing: border-box;
}

body {
	font-family: 'Jost', sans-serif;
	font-size: 18px;
	letter-spacing: 0;
	font-weight: 400;
	color: #0b0a0c;
	position: relative;
}

p {
	color: var(--muted-foreground);
}

[class^="rmf_fn_"] {
	width: 100%;
	float: left;
	clear: both;
}

.rmf_fn_wrapper,
.rmf_fn_wrapper * {
	box-sizing: border-box;
}

.rmf_fn_wrapper {
	position: relative;
	z-index: 2;
}

.fn__svg {
	fill: var(--primary);
	width: 18px;
	height: 18px;
}

p {
	letter-spacing: 0;
}

h1,
h2,
h3,
h4,
h5,
h6 {
	color: var(--muted);
}

/* [aria-label="Notifications alt+T"] {
  position: absolute !important;
  width: 1px !important;
  height: 1px !important;
  padding: 0 !important;
  margin: -1px !important;
  overflow: hidden !important;
  clip: rect(0, 0, 0, 0) !important;
  white-space: nowrap !important;
  border: 0 !important;
} */


/*------------------------------------------------------------------*/
/*	02) Site Structure
/*------------------------------------------------------------------*/
.resume-opened {
	height: 100vh;
	overflow: hidden;
}

.resume-opened .rmf_fn_cv {
	opacity: 1;
	visibility: visible;
	transition: all .5s ease;
}

.resume-opened .rmf_cv {
	opacity: 1;
	visibility: visible;
	transform: translateY(0);
	transition: all 0.5s ease;
}

.resume-opened .rmf_fn_cv .closer {
	transform: translateX(0px);
	transition: transform .5s 1s ease;
}

.rmf_fn_cv {
	position: fixed;
	top: 0px;
	left: 0px;
	right: 0px;
	height: 100vh;
	z-index: 77;
	background-color: rgba(29, 27, 25, .95);
	opacity: 0;
	visibility: hidden;

	-webkit-transition: all .5s ease;
	-moz-transition: all .5s ease;
	-ms-transition: all .5s ease;
	-o-transition: all .5s ease;
	transition: all .5s 1s ease;
}

.rmf_fn_cv .closer {
	width: 42px;
	height: 42px;
	display: block;
	text-decoration: none;
	position: absolute;
	right: 5px;
	top: 5px;
	z-index: 233;
	transform: translateX(50px);
	transition: transform .5s ease;
}

.rmf_fn_cv .closer:before,
.rmf_fn_cv .closer:after {
	content: "";
	position: absolute;
	width: 18px;
	height: 2px;
	background-color: var(--muted);
	left: 12px;
	top: 20px;
}

.rmf_fn_cv .closer:after {
	transform: rotate(45deg);
}

.rmf_fn_cv .closer:before {
	transform: rotate(135deg);
}

.rmf_fn_cv .closer:hover {
	background-color: #070707;
}

.resume-opened .rmf_cv .cv__header,
.resume-opened .rmf_cv .cv__content {
	opacity: 1;
	visibility: visible;
	transform: translateY(0);
	transition: all 0.5s 0.5s ease;
}

.resume-opened .rmf_cv .cv__bg {
	left: 0;
	transition: all 0.5s ease;
}

.resume-opened .rmf_cv .cv__bg2 {
	right: 0;
	transition: all 0.5s ease;
}

.rmf_cv .cv__content {
	position: absolute;
	z-index: 99;
	width: 75vw;
	width: calc(75vw - 100px);
	float: right;
	right: 50px;
	top: 50px;
	bottom: 50px;
	overflow-y: scroll;
	color: #999;
	font-size: 20px;
	font-weight: 400;
	padding-right: 10px;
	padding-left: 30px;
	transform: translateY(-380px);
	transition: all .5s ease;
	opacity: 0;
}

.rmf_cv .cv__content {
	scrollbar-width: thin;
	scrollbar-color: #000 #000;
}

.rmf_cv .cv__content::-webkit-scrollbar {
	width: 14px;
}

.rmf_cv .cv__content:-webkit-scrollbar-track {
	background: #000;
}

.rmf_cv .cv__content::-webkit-scrollbar-thumb {
	background-color: #222;
	border-radius: 10px;
}

.rmf_cv .cv__bg {
	position: absolute;
	z-index: 1;
	width: 25%;
	background: #0BAFAC;
	clip-path: polygon(100% 0, 80% 50%, 100% 100%, 0 100%, 0 0);
	top: 0;
	left: -30%;
	bottom: 0;
	transition: all .5s .5s ease;
	/* mix-blend-mode: normal; */
}

.rmf_cv .cv__bg2 {
	position: absolute;
	z-index: 1;
	width: 30%;
	background-color: var(--bg-tertiary);
	clip-path: polygon(20% 0, 100% 0, 100% 50%, 100% 100%, 20% 100%, 0 50%);
	top: 0;
	right: -30%;
	bottom: 0;
	transition: all .5s .5s ease;
	/* mix-blend-mode: multiply; */

}
/* ... */

